--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev:server": "nodemon --exec babel-node src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "mongoose": "^5.8.2",
-    "nodemon": "^2.0.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
