--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "index.js",
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/server",
+    "build:server": "babel src --out-dir build",
+    "start": "PRODUCTION=true node build/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.10.3",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.10.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -22,7 +29,9 @@
     "mongoose": "^5.8.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
