--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/server",
     "build:server": "babel src --out-dir build",
+    "copyAll": "cp -R src/static build",
+    "build": "npm run build:server && npm run copyAll",
     "start": "PRODUCTION=true node build/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,18 +22,18 @@
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.8.4",
     "@babel/runtime": "^7.10.3",
+    "autoprefixer": "^9.8.4",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
